--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,44 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidgames.myframework">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.androidgames.myframework"
+    android:installLocation="preferExternal"
+    android:versionCode="1"
+    android:versionName="0.1">
+
+    <uses-sdk
+        android:maxSdkVersion="26"
+        android:minSdkVersion="3" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:debuggable="true"
+        android:icon="@drawable/icon_foreground"
+        android:label="myGame"
+        tools:ignore="HardcodedDebugMode">
+        <activity
+            android:name=".GameActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="myGame"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AndroidBasicStarter"
+            android:label="@string/title_activity_android_basic_starter"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LifeCycleTest"
+            android:label="@string/title_activity_life_cycle_test"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+    </application>
+
 </manifest>
